--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -13,13 +13,12 @@
 .pile-character-grid .column { z-index: -1; position: absolute; background-color: #fafae9; }
 .pile-character-grid div.expanded { border-top: 1px solid #519136; border-bottom: 1px solid #519136; }
 .pile-character-grid div:hover { background-color: #fafae9; }
-.pile-character-grid div:hover span { /* "expand" arrow */ visibility: visible; }
 .pile-character-grid div:hover.expanded { background-color: transparent; }
 .pile-character-grid i { position: relative; display: inline-block; width: 20em; }
 .pile-character-grid i .expand-button { cursor: pointer; position: absolute; right: 2px; top: -2px; background-color: #dc9402; padding: 2px 8px 4px; color: white; font-size: 0.8em; font-style: normal; }
-.pile-character-grid b { display: inline-block; border: 0px solid #dc9402; padding: 4px 2px; cursor: pointer; }
+.pile-character-grid b { cursor: pointer; display: inline-block; padding: 4px 2px; font-weight: normal; }
 .pile-character-grid b.x { background-color: #519136; color: white; }
-.pile-character-grid b:hover { background-color: #fafae9; z-index: 2; }
-.pile-character-grid b:hover.x { background-color: #27471a; }
+.pile-character-grid b:hover { z-index: 2; }
+.pile-character-grid b:hover.x { background-color: #3c6c28; }
 
 .value-tip { display: none; position: absolute; padding: 0.5em; background-color: #fafae9; border: 2px solid #dc9402; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; -webkit-box-shadow: 0px 1px 4px #d3d344; -moz-box-shadow: 0px 1px 4px #d3d344; box-shadow: 0px 1px 4px #d3d344; }
