Better highlight character value names #226
If any row is expanded, we go ahead and light up the expanded name of
the currently-hovered character value, even if our cursor is up in one
of the non-expanded rows of the table.

--- a/gobotany/static/sass/edit.scss
+++ b/gobotany/static/sass/edit.scss
@@ -60,8 +60,8 @@ $highlight: lighten($body_bg, 10);
         font-weight: normal;
 
         &.x { background-color: $text_green; color: white; }
-        &:hover { z-index: 2; }
-        &:hover.x { background-color: darken($text_green, 10); }
+        &.highlight { z-index: 2; background-color: $highlight; }
+        &.highlight.x { background-color: darken($text_green, 10); }
     }
 }
 
