--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -18,7 +18,7 @@
 .pile-character-grid i .expand-button { cursor: pointer; position: absolute; right: 2px; top: -2px; background-color: #dc9402; padding: 2px 8px 4px; color: white; font-size: 0.8em; font-style: normal; }
 .pile-character-grid b { cursor: pointer; display: inline-block; padding: 4px 2px; font-weight: normal; }
 .pile-character-grid b.x { background-color: #519136; color: white; }
-.pile-character-grid b:hover { z-index: 2; }
-.pile-character-grid b:hover.x { background-color: #3c6c28; }
+.pile-character-grid b.highlight { z-index: 2; background-color: #fafae9; }
+.pile-character-grid b.highlight.x { background-color: #3c6c28; }
 
 .value-tip { display: none; position: absolute; padding: 0.5em; background-color: #fafae9; border: 2px solid #dc9402; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; -webkit-box-shadow: 0px 1px 4px #d3d344; -moz-box-shadow: 0px 1px 4px #d3d344; box-shadow: 0px 1px 4px #d3d344; }
