--- a/gobotany/static/sass/edit.scss
+++ b/gobotany/static/sass/edit.scss
@@ -65,7 +65,7 @@ $highlight: lighten($body_bg, 10);
     }
 }
 
-.value-tip {
+.value-tips div {
     display: none;
     position: absolute;
     padding: 0.5em;
