Improve decision about width of character editing #226

--- a/gobotany/static/sass/edit.scss
+++ b/gobotany/static/sass/edit.scss
@@ -24,6 +24,8 @@ $highlight: lighten($body_bg, 10);
     }
 
     div {
+        white-space: nowrap;
+
         &.expanded {
             border-top: 1px solid $text_green;
             border-bottom: 1px solid $text_green;
