Rearranged data to sort character editor by family #226

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -49,7 +49,7 @@
 
 <script>
   character_values = {{ values_json|safe }};
-  taxon_value_vectors = {{ vectors_json|safe }};
+  grid_data = {{ grid|safe }};
 </script>
 
 {% endblock %}
