Mark species in the editor that are full-key only #226

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -38,6 +38,10 @@
 </ul>
 {% endif %}
 
+<p>
+  Species marked with “(fk)” appear in the Full Key only
+</p>
+
 <div class="pile-character-grid">
 </div>
 
