Add button to show only simple key in editor #226

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -42,6 +42,11 @@
   Species marked with “(fk)” appear in the Full Key only
 </p>
 
+<p>
+  <span class="all-species-button">All Species</span>
+  <span class="simple-key-button">Simple Key Only</span>
+</p>
+
 <div class="pile-character-grid">
 </div>
 
