Add separate coverage percentage for simple key #226

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -15,7 +15,8 @@
 <h2>{{ character.short_name }}</h2>
 
 <p class="new">
-  Coverage: <b>{{ coverage_percent|floatformat:1 }} %</b>
+  All plants coverage: <b>{{ coverage_percent_full|floatformat:1 }} %</b><br>
+  Simple Key coverage: <b>{{ coverage_percent_simple|floatformat:1 }} %</b>
 </p>
 
 <p>
