Mark plants with no character values in the editor #226

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -40,7 +40,7 @@
 {% endif %}
 
 <p>
-  Species marked with “(fk)” appear in the Full Key only
+  Species marked with “(fk)” appear in the Full Key only.
 </p>
 
 <p>
