The character value edit form now saves its data #226

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -46,6 +46,7 @@
 <p>
   <span class="all-species-button">All Species</span>
   <span class="simple-key-button">Simple Key Only</span>
+  <span class="save-button">SAVE CHANGES</span>
 </p>
 
 <div class="pile-character-grid">
@@ -61,5 +62,7 @@
   character_values = {{ values_json|safe }};
   grid_data = {{ grid|safe }};
 </script>
+
+{% csrf_token %}
 
 {% endblock %}
