Update the Advanced ID Tools page and add it to Help. (#339)

--- a/gobotany/site/templates/gobotany/_help_navigation.html
+++ b/gobotany/site/templates/gobotany/_help_navigation.html
@@ -17,6 +17,9 @@
     <div class="section glossary">
         <h4>{% nav_item 'Glossary' site-glossary 'a' %}</h4>
     </div>
+    <div class="section advanced-id-tools">
+        <h4>{% nav_item 'Advanced ID Tools' advanced-id-tools %}</h4>
+    </div>
     <div class="section about">
         <h4>{% nav_item 'About Go Botany' site-about %}</h4>
     </div>
