--- a/gobotany/site/templates/gobotany/full_key_placeholder.html
+++ b/gobotany/site/templates/gobotany/full_key_placeholder.html
@@ -2,7 +2,8 @@
 
 {% block title %}Full Key{% endblock %}
 
-{% block body_attributes %}class="placeholder"{% endblock %}
+{% block body_attributes %}id="fullkey-placeholder"
+    class="help placeholder"{% endblock %}
 
 {% block main_content %}
                     <h1>Full Key</h1>
@@ -22,5 +23,5 @@
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "gobotany/_sidebar_items.html" %}
+    {% include "gobotany/_help_navigation.html" %}
 {% endblock %}
