--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -333,7 +332,7 @@ body.help nav li.help { background: url(/static/images/layout/active-nav-app.png
 /* Section navigation (sidebar, only in some sections) */
 body { /* Place "you are here" marker next to a non-linked item. This is the top level of each sub-section. */ /* Handle pages beneath subsections so they will have a "you are here" marker. Each of these must be set up individually where needed. */ }
 body.help #sidebar h4 a:not([href])::before, body.plantshare #sidebar h4 a:not([href])::before, body.legal #sidebar h4 a:not([href])::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
-body.help#glossary #sidebar .glossary a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
+body.help#glossary #sidebar .glossary a::before, body.help#fullkey-placeholder #sidebar .advanced-id-tools a::before, body.help#dkey-placeholder #sidebar .advanced-id-tools a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 body.plantshare#sighting #sidebar .sightings a::before { color: #000; content: "\25b8"; margin-left: -15px; padding-bottom: 5px; padding-right: 7px; }
 
 /* Header */
