--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -244,6 +244,12 @@ p.meta {
     }
 }
 
+#main .distribution-character {   /* species code: box, as in printed book */
+    margin: 0 0.25em;
+    border: 1px solid black;
+    padding: 0 0.25em;
+    font-size: 1em*14px/16px;
+}
 
 /* Navigation highlighting */
 
