Geocode an address-based sighting location to a hidden field. (#292)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -30,6 +30,8 @@
             <label for="id_location_notes">Notes on location</label>
             {{ form.location_notes }}
 
+            {{ form.location_coordinates.as_hidden }}
+
         </fieldset>
 
         <p>Add image(s) to sighting</p> 
