Fix #340 by changing dkey "Tribes" to "Sections"

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -135,7 +135,7 @@
               ><i>{{ p.title }}</i>
             {% elif p.rank == 'subgroup' and page.rank == 'genus' %}
               ><i>{{ p.title|abbreviate_title }}</i>
-            {% elif p.rank == 'tribe' %}
+            {% elif p.rank == 'section' %}
               >{{ p.title }}
             {% else %}
               >MALFUNCTION
