Change dkey pull-down to "Jump to a Major Group" #343
Instead of just "Jump to a group".

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -20,7 +20,7 @@
   <div id="jump-nav">
     <div class="groupbox">
       <select>
-        <option value="instructions">Jump to a group…</option>
+        <option value="instructions">Jump to a Major Group…</option>
       </select>
       <ul>
         {% for group in groups %}
