Rename "edit.js" to "cv.js" since it's so specific
I thought it would be a little tiny JS file with all JS for our edit
pages.  Instead, it is a big JS file already with just the JS for our
character-value editor page.  So I have made its name more specific.

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -1,7 +1,7 @@
 {% extends "gobotany/_edit_base.html" %}
 
 {% block js_require %}
-    require(['editor/edit'], function (edit) {
+    require(['editor/cv'], function (edit) {
         edit.setup_pile_character_page();
     });
 {% endblock %}
