--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -12,19 +12,8 @@
 {% block main_content %}
 <h1>Sightings</h1>
 
-<h2>Latest</h2>
-<ul class="sightings-list">
-{% for sighting in sightings %}
-    <li><a
-        href="{% url ps-sighting sighting.id %}">{{ sighting.identification }}
-        at {{ sighting.location }}</a>, posted by {{ sighting.user }}
-        on {{ sighting.created }}
-    </li>
-{% endfor %}
-</ul>
-
 <form id="sightings-locator">
-    <h2>Sightings Locator</h2>
+    <h2 id="locator">Locator</h2>{# h2 id for URL fragment ID #}
     <h3>Show recent plant sightings for</h3>
     
     {% csrf_token %}
@@ -40,6 +29,17 @@
 
     {% sightings_map latitude=map.latitude longitude=map.longitude center_title=map.center_title height="524px" width="710px" zoom="6" id="sightings-map" %}
 </form>
+
+<h2 id="latest">Latest</h2>{# h2 id for URL fragment ID #}
+<ul>
+{% for sighting in sightings %}
+    <li><a
+        href="{% url ps-sighting sighting.id %}">{{ sighting.identification }}
+        at {{ sighting.location }}</a>, posted by {{ sighting.user }}
+        on {{ sighting.created }}
+    </li>
+{% endfor %}
+</ul>
 
 {% endblock %}
 
