--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -962,8 +961,8 @@ body.plantshare#log-in form.login { padding-left: 0; }
 body.plantshare#log-in form.login label { font-size: 12px; }
 body.plantshare#log-in form.login input { border-color: #c3d941; }
 body.plantshare #sightings-locator { /* end .mini */ }
-body.plantshare #sightings-locator h3 { font-size: 14px; }
-body.plantshare #sightings-locator input { border: 0 none; float: left; height: 22px; margin: 5px 0; padding: 0 2px 0 12px; }
+body.plantshare #sightings-locator h3 { display: inline-block; float: left; font-size: 14px; line-height: 22px; margin: 0 7px 5px 0; }
+body.plantshare #sightings-locator input { border: 0 none; float: left; height: 22px; margin: 0 0 5px 0; padding: 0 2px 0 12px; }
 body.plantshare #sightings-locator input[type='text'] { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat 0px -334px; font-size: 11px; width: 160px; }
 body.plantshare #sightings-locator input[type='submit'] { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -483px -334px; font-size: 0; text-indent: -9999px; width: 30px; }
 body.plantshare #sightings-locator input:focus { outline: 0 none; }
@@ -978,7 +977,8 @@ body.plantshare #sightings-locator.mini .box form p { line-height: 14px; margin:
 body.plantshare #sightings-locator.mini .box form p.full-link { margin-top: 10px; }
 body.plantshare #sightings-locator.mini .box .map { clear: none; border-bottom: 0; border-right: 0; border-top: 0; float: right; margin-top: 0; }
 body.plantshare#new-sighting h1 + div { background: #fff; border: 1px solid #c3d941; margin-bottom: 16px; padding: 5px 16px; }
-body.plantshare#sightings .sightings-list { line-height: normal; margin-bottom: 12px; }
+body.plantshare#sightings #latest { margin-top: 18px; }
+body.plantshare#sightings #latest + ul { line-height: normal; margin-bottom: 12px; }
 body.plantshare.sighting .map { float: right; }
 body.plantshare.sighting form label { text-transform: none; }
 body.plantshare.sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0; width: 684px; }
