Split the recent sightings and locator into two pages. (#292)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -2,11 +2,14 @@
 <div class="box">
     {% include "_plantshare_home_nav_item.html" %}
     {% if user.is_authenticated %}
-    <div class="section sightings">
-        <h4>{% nav_item 'Sightings' ps-sightings %}</h4>
-    </div>
     <div class="section post-sighting">
         <h4>{% nav_item 'Post a Sighting' ps-new-sighting %}</h4>
+    </div>
+    <div class="section sightings-locator">
+        <h4>{% nav_item 'Sightings Locator' ps-sightings-locator %}</h4>
+    </div>
+    <div class="section sightings">
+        <h4>{% nav_item 'Recent Sightings' ps-sightings %}</h4>
     </div>
     <div class="section profile">
         <h4>{% nav_item 'My Profile' ps-profile %}</h4>
