--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -3,34 +3,11 @@
 
 {% block title %}Sightings: PlantShare{% endblock %}
 
-{% block js_require %}
-    require(['util/suggester_init', 'plantshare/sightings']);
-{% endblock %}
-
 {% block body_attributes %}id="sightings" class="plantshare"{% endblock %}
 
 {% block main_content %}
-<h1>Sightings</h1>
+<h1>Recent Sightings</h1>
 
-<form id="sightings-locator">
-    <h2 id="locator">Locator</h2>{# h2 id for URL fragment ID #}
-    <h3>Show recent plant sightings for</h3>
-    
-    {% csrf_token %}
-    <input type="text" autocomplete="off"
-        name="plant-name"
-        id="plant-name"
-        placeholder="scientific or common name"
-        class="suggest"
-        data-suggest-url="{% url site-plant-name-suggestions %}?q=%s"
-        data-align-menu-inside-input="true"
-        data-submit-on-select="true">
-    <input type="submit" value="Go">
-
-    {% sightings_map latitude=map.latitude longitude=map.longitude center_title=map.center_title height="524px" width="710px" zoom="6" id="sightings-map" %}
-</form>
-
-<h2 id="latest">Latest</h2>{# h2 id for URL fragment ID #}
 <ul>
 {% for sighting in sightings %}
     <li><a
