Fix the profile image size on the main PlantShare page.

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -125,7 +125,9 @@ body.plantshare {
         img {
             display: block;
             float: left;
+            height: 84px;
             margin-right: $section-padding;
+            width: 84px;
         }
         table {
             clear: left;
