--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -949,7 +949,7 @@ body.plantshare .profile h2 { float: left; }
 body.plantshare .profile a.edit { display: block; float: right; padding-top: 12px; }
 body.plantshare .profile h3 { font-size: 18px; }
 body.plantshare .profile div { clear: left; height: 84px; }
-body.plantshare .profile img { display: block; float: left; margin-right: 16px; }
+body.plantshare .profile img { display: block; float: left; height: 84px; margin-right: 16px; width: 84px; }
 body.plantshare .profile table { clear: left; }
 body.plantshare#sign-up #main form input { width: 350px; }
 body.plantshare#sign-up #main form input.button { background: transparent url(../images/layout/plantshare-btns.png) no-repeat -1px -359px; border: 0; height: 41px; margin-top: 12px; width: 244px; display: block; text-indent: -9000px; }
