--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -977,7 +977,10 @@ body.plantshare #sightings-locator.mini .box form p { line-height: 14px; margin:
 body.plantshare #sightings-locator.mini .box form p.full-link { margin-top: 10px; }
 body.plantshare #sightings-locator.mini .box .map { clear: none; border-bottom: 0; border-right: 0; border-top: 0; float: right; margin-top: 0; }
 body.plantshare#new-sighting h1 + div { background: #fff; border: 1px solid #c3d941; margin-bottom: 16px; padding: 5px 16px; }
-body.plantshare#sightings #main ul { line-height: normal; margin: 18px 0 0; }
+body.plantshare#sightings #main > ul { margin-top: 14px; }
+body.plantshare#sightings #main > ul > li { float: left; margin-bottom: 14px; }
+body.plantshare#sightings #main > ul > li ul { margin-left: 200px; margin-top: -20px; }
+body.plantshare#sightings #main > ul > li ul li { clear: left; }
 body.plantshare.sighting .map { float: right; }
 body.plantshare.sighting form label { text-transform: none; }
 body.plantshare.sighting form fieldset { border: 0; margin: 0 0 16px; padding: 0; width: 684px; }
