Streamline the Post a Sighting form.
Edit the instructions atop the form to be shorter and clearer,
saving a line of vertical space. Remove the '* Required' marker
in that box and place the word required next to the now two
fields that need it, saving two more lines of space. (#292)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -5,7 +5,8 @@
         {{ form.non_field_errors }}
 
         {{ form.identification.errors }}
-        <label for="id_identification">Identification of plant *</label>
+        <label for="id_identification">Identification of plant
+            (required)</label>
         {{ form.identification }}
 
         {{ form.notes.errors }}
@@ -16,7 +17,7 @@
             <legend>Location</legend>
 
             {{ form.location.errors }}
-            <label for="id_location">Location *</label>
+            <label for="id_location">Location (required)</label>
             <div class="location">
                 {{ form.location }}
                 {% location_map location="Framingham, MA" height_px="150" width_px="302" zoom="7" id="id_location_map" %}
