--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -17,11 +17,10 @@
 <div>
     <p><strong>Spotted a plant and want to share it with others? Here's where
         to start!</strong></p>
-    <p><em>Rare Plant Sightings: As a matter of policy, sightings of rare 
-    plants will not be visible to other PlantShare members. However,
-    we welcome you to post such sightings. We will keep them confidential
-    and use the information for our scientific studies.</em></p>
-    <p>* = Required</p>
+    <p><em>Rare plant sightings will not be made visible to others on
+        PlantShare.</em> However, we welcome you to post such sightings.
+        We will keep them confidential and use the information for our
+        scientific studies.</p>
 </div>
 
 <div class="modal-container">
