--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -125,9 +125,9 @@ body.plantshare {
         img {
             display: block;
             float: left;
-            height: 84px;
+            max-height: 84px;
             margin-right: $section-padding;
-            width: 84px;
+            max-width: 84px;
         }
         table {
             clear: left;
